# PerfectPitch

./: .gitignore  README.md  meson.build
data/: Main.glade  com.github.artempopof.perfectpitch.appdata.xml.in  com.github.artempopof.perfectpitch.desktop.in  com.github.artempopof.perfectpitch.gresource.xml  meson.build
data/css/: main.css
po/: POTFILES
po/extra/: POTFILES  extra.pot
res/: Main.glade
src/: Application.vala  GuessCard.vala  MainController.vala  Player.vala  TimerCallback.vala  TimerWidget.vala  UiGameListener.vala  meson.build
